# TeamSpeak3-Qt-Plugin-Template

./: .gitmodules  CMakeLists.txt  README.md
.github/: FUNDING.yml  renovate.json
.github/workflows/: deploy.yml
deploy/: package.ini
src/: config.cpp  config.h  config.ui  definitions.hpp  helper.h  plugin.cpp
